fix: controller with model dependecy